[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interfaces/Interfaces.gd" type="Script" id=1]

[node name="Interfaces" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPad" type="Control" parent="PauseMenu/HBoxContainer"]
margin_right = 338.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MenuCentre" type="VBoxContainer" parent="PauseMenu/HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="TopPad" type="Control" parent="PauseMenu/HBoxContainer/MenuCentre"]
margin_right = 339.0
margin_bottom = 181.0
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="PauseMenu/HBoxContainer/MenuCentre"]
margin_top = 185.0
margin_right = 339.0
margin_bottom = 205.0
text = "Resume"

[node name="MiddlePad" type="Control" parent="PauseMenu/HBoxContainer/MenuCentre"]
margin_top = 209.0
margin_right = 339.0
margin_bottom = 390.0
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="PauseMenu/HBoxContainer/MenuCentre"]
margin_top = 394.0
margin_right = 339.0
margin_bottom = 414.0
text = "Exit"

[node name="BottomPad" type="Control" parent="PauseMenu/HBoxContainer/MenuCentre"]
margin_top = 418.0
margin_right = 339.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="RightPad" type="Control" parent="PauseMenu/HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[connection signal="pressed" from="PauseMenu/HBoxContainer/MenuCentre/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/MenuCentre/ExitButton" to="." method="_on_ExitButton_pressed"]
